<resources>
    <string name="app_name">BudgetBuddy</string>

    <string name="scan">Scan</string>

    <string name="shopping_session_action">Shopping Session Action</string>
    <string name="add_action">Add Action</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="server_client_id">716379123006-jmm6nai3c4fhhgreu7jdmd5hmfje53ph.apps.googleusercontent.com</string>
    <string name="net_income">Net Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Expense Category Labels  -->
    <string name="auto_category_label">Auto</string>
    <string name="beauty_category_label">Beauty</string>
    <string name="clothing_category_label">Clothing</string>
    <string name="entertainment_category_label">Entertainment</string>
    <string name="financial_category_label">Financial</string>
    <string name="general_category_label">General</string>
    <string name="groceries_category_label">Groceries</string>
    <string name="home_category_label">Home</string>
    <string name="industry_category_label">Industry</string>
    <string name="learning_category_label">Learning</string>
    <string name="medical_category_label">Medical</string>
    <string name="nightlife_category_label">Nightlife</string>
    <string name="restaurants_category_label">Restaurants</string>
    <string name="services_category_label">Services</string>
    <string name="shop_category_label">Shop</string>
    <string name="spiritual_category_label">Spiritual</string>
    <string name="sports_category_label">Sports</string>
    <string name="transport_category_label">Transport</string>
    <string name="travel_category_label">Travel</string>
    <string name="choose_income_category">Choose Income Category</string>

    <!--  Income Category Labels  -->
    <string name="paycheck_category_label">Paycheck</string>
    <string name="gift_category_label">Gift</string>
    <string name="interest_category_label">Interest</string>
    <string name="other_category_label">Other</string>
    <string name="shopping_sessions">Shopping Sessions</string>
    <string name="pick_a_store">Pick a Store</string>
    <string name="pick_a_location">Pick a Location</string>
    <string name="total">Total</string>
    <string name="items">Items</string>
    <string name="search_an_item">Search an Item</string>
    <string name="calendar_action">Calendar Action</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

     <!--  Quiz Questions  -->
    <string name="correct"><b>SCORE IS</b> \n
                           <b>%1$d</b> OUT OF 6</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>
    <string name="a">A major reason for financial planning is to prevent careless spending</string>
    <string name="b">Learning the language of money is not important because you will depend on financial planners</string>
    <string name="c">Receipts and documents showing income and expenses should be kept in a safe place in case of an audit</string>
    <string name="d">The two elements to consider in budgeting and planning are your income and your expenses</string>
    <string name="e">Before you prepare a budget, it is a good idea to keep track of your income and expenses for a month or two</string>

    <string name="next_text">next</string>
    <string name="prev_text">previous</string>
    <string name="takecontrol">Take control of your budget!</string>
    <string name="housing">Housing</string>
    <string name="budget">Budget:</string>
</resources>